Add Get customer profile endpoint
